WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159409
[JSC] Object.getOwnPropertyDescriptors should not add undefined props to result
https://bugs.webkit.org/show_bug.cgi?id=159409
Summary
[JSC] Object.getOwnPropertyDescriptors should not add undefined props to result
Caitlin Potter (:caitp)
Reported
2016-07-04 09:58:35 PDT
[JSC] Object.getOwnPropertyDescriptors should not add undefined props to result
Attachments
Patch
(3.99 KB, patch)
2016-07-04 09:59 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Patch
(23.06 KB, patch)
2016-07-04 10:34 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Patch
(23.06 KB, patch)
2016-07-26 15:47 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Caitlin Potter (:caitp)
Comment 1
2016-07-04 09:59:07 PDT
Created
attachment 282727
[details]
Patch
Caitlin Potter (:caitp)
Comment 2
2016-07-04 10:34:04 PDT
Created
attachment 282729
[details]
Patch
Caitlin Potter (:caitp)
Comment 3
2016-07-04 10:37:16 PDT
Hi, We're landing this change in V8 today, believing it (
https://github.com/tc39/ecma262/pull/593
) is likely to reach consensus at the next TC39 meeting. It probably wouldn't hurt to land this in WebKit as well, but it's fine to wait until the spec change is decided on. In any case, if consensus isn't reached, it's simple enough to simply revert the patch. This patch also fixes up these tests and moves them to a more appropriate directory.
Saam Barati
Comment 4
2016-07-06 11:27:23 PDT
Let's wait until the spec change is decided.
Jordan Harband
Comment 5
2016-07-26 14:48:00 PDT
This received consensus at the July 2016 TC39 meeting; please merge at your leisure.
Caitlin Potter (:caitp)
Comment 6
2016-07-26 14:52:36 PDT
Thanks Jordan, I'll make sure this isn't bitrotten today before signing off.
Saam Barati
Comment 7
2016-07-26 14:54:39 PDT
(In reply to
comment #6
)
> Thanks Jordan, I'll make sure this isn't bitrotten today before signing off.
Sounds good. I'll review when you say this patch is OK or if you post a rebased version.
Caitlin Potter (:caitp)
Comment 8
2016-07-26 15:47:01 PDT
Created
attachment 284648
[details]
Patch
Caitlin Potter (:caitp)
Comment 9
2016-07-26 15:48:05 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Thanks Jordan, I'll make sure this isn't bitrotten today before signing off. > > Sounds good. I'll review when you say this patch is OK or if you post a > rebased version.
I've posted a rebased version
Geoffrey Garen
Comment 10
2016-07-26 15:55:38 PDT
Comment on
attachment 284648
[details]
Patch r=me
WebKit Commit Bot
Comment 11
2016-07-26 16:07:45 PDT
Comment on
attachment 284648
[details]
Patch Clearing flags on attachment: 284648 Committed
r203747
: <
http://trac.webkit.org/changeset/203747
>
WebKit Commit Bot
Comment 12
2016-07-26 16:07:50 PDT
All reviewed patches have been landed. Closing bug.
Jordan Harband
Comment 13
2016-07-26 16:37:03 PDT
Thanks everybody!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug