[JSC] Object.getOwnPropertyDescriptors should not add undefined props to result https://bugs.webkit.org/show_bug.cgi?id=159409

Reviewed by Geoffrey Garen.

* runtime/ObjectConstructor.cpp:
(JSC::objectConstructorGetOwnPropertyDescriptors):
* tests/es6.yaml:
* tests/es6/Object_static_methods_Object.getOwnPropertyDescriptors-proxy.js:
(testPropertiesIndexedSetterOnPrototypeThrows.set get var): Deleted.
(testPropertiesIndexedSetterOnPrototypeThrows): Deleted.
* tests/stress/Object_static_methods_Object.getOwnPropertyDescriptors-proxy.js: Renamed from Source/JavaScriptCore/tests/es6/Object_static_methods_Object.getOwnPropertyDescriptors-proxy.js.
* tests/stress/Object_static_methods_Object.getOwnPropertyDescriptors.js: Renamed from Source/JavaScriptCore/tests/es6/Object_static_methods_Object.getOwnPropertyDescriptors.js.


Canonical link: https://commits.webkit.org/178376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203747 268f45cc-cd09-0410-ab3c-d52691b4dbfc