Source/JavaScriptCore/runtime/ObjectConstructor.cpp
@@ -263,8 +263,16 @@ JSValue objectConstructorGetOwnPropertyDescriptors(ExecState* exec, JSObject* ob
         return jsUndefined();
 
     for (auto& propertyName : properties) {
-        JSValue fromDescriptor = objectConstructorGetOwnPropertyDescriptor(exec, object, propertyName);
+        PropertyDescriptor descriptor;
+        bool didGetDescriptor = object->getOwnPropertyDescriptor(exec, propertyName, descriptor);
         if (exec->hadException())
+            return jsUndefined();
+
+        if (!didGetDescriptor)
+            continue;
+
+        JSObject* fromDescriptor = constructObjectFromPropertyDescriptor(exec, descriptor);
+        if (!fromDescriptor)
             return jsUndefined();
 
         PutPropertySlot slot(descriptors);
